--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "devDependencies": {
     "browser-sync": "^2.17.5",
     "gulp": "^3.9.1",
+    "gulp-flatmap": "^1.0.0",
     "gulp-ruby-sass": "^2.1.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "path": "^0.12.7",
+    "sass-convert": "^0.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
