--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "personal-site",
-  "version": "0.0.1",
-  "description": "Work in progress.",
+  "version": "0.1",
+  "description": "Work in progress...",
   "main": "index.html",
   "devDependencies": {
     "browser-sync": "^2.17.5",
+    "clean-css": "^4.0.4",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.0",
     "gulp-flatmap": "^1.0.0",
     "gulp-ruby-sass": "^2.1.0",
     "gulp-sass": "^2.3.2",
@@ -24,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/mcotse/personal-site/issues"
   },
-  "homepage": "https://github.com/mcotse/personal-site#readme"
+  "homepage": "http://matthewtse.xyz"
 }
