--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.0",
     "gulp-flatmap": "^1.0.0",
+    "gulp-minify": "0.0.15",
     "gulp-ruby-sass": "^2.1.0",
     "gulp-sass": "^2.3.2",
     "path": "^0.12.7",
