--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
   "bugs": {
     "url": "https://github.com/mcotse/personal-site/issues"
   },
-  "homepage": "http://matthewtse.xyz"
+  "homepage": "https://mcotse.github.io"
 }
